<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">
    
    
    <ImageView
        android:src="@drawable/car_128x128"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_titulo"
        android:textSize="30dp"
        android:gravity="center_horizontal"/>
    <EditText
        android:id="@+id/edt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hdn_id"/>

    <EditText
        android:id="@+id/edt_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hdn_fecha"/>
    <EditText
        android:id="@+id/edt_patente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hdn_patente"/>
    <Spinner
        android:id="@+id/spn_estado"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/edt_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hdn_comentario"/>
    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_regristrar" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_eliminar" />
    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_actualizar" />
    <TextView
        android:id="@+id/txv_respuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>